# django-blog-api

./: .gitignore  README.md  db.sqlite3  pyproject.toml  requirements.txt
blogapi/: settings.py  urls.py
blogapp/: admin.py  models.py  serializers.py  urls.py  views.py
blogapp/migrations/: 0001_initial.py  0002_initial.py
djuix_auth/: admin.py  apps.py  methods.py  models.py  serializers.py  urls.py  utils.py  views.py
djuix_auth/migrations/: 0001_initial.py
server/: README.md  db.sqlite3  pyproject.toml
server/api/: serializers.py
server/blog/: settings.py
